terraform/modules/security_groups/main.tf
resource "aws_security_group" "rds" {
  name_prefix            = "${var.name_prefix}-rds-"
  vpc_id                 = var.vpc_id
  description            = "PostgreSQL access from EKS cluster"
  revoke_rules_on_delete = true

  ingress {
    description     = "Postgres do cluster EKS"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [var.eks_cluster_security_group_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name_prefix}-rds-sg"
  }

  timeouts {
    delete = "5m"
  }
}

resource "aws_security_group" "redis" {
  name_prefix            = "${var.name_prefix}-redis-"
  vpc_id                 = var.vpc_id
  description            = "Redis access from EKS cluster"
  revoke_rules_on_delete = true

  ingress {
    description     = "Redis do cluster EKS"
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [var.eks_cluster_security_group_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name_prefix}-redis-sg"
  }

  timeouts {
    delete = "5m"
  }
}
